# AssistantExtensions

./: AEAssistantdMsgCenter.h  AEAssistantdMsgCenter.mm  AEChatBot.h  AEChatBot.mm  AEContext.h  AEContext.mm  AEDevHelper.xm  AEExtension.h  AEExtension.mm  AESpringBoardMsgCenter.h  AESpringBoardMsgCenter.mm  AEStringAdditions.h  AEStringAdditions.mm  AESupport.h  AESupport.mm  AEToggle.h  AEToggle.mm  AEX.h  AEX.mm  Makefile  OS5Additions.h  README  SiriObjects.mm  SiriObjectsRaw.h  SiriObjects_private.h  main.h  main.mm  shared.h  shared.mm  systemcmds.h  systemcmds.mm
AEPrefs/: AEDonate.h  AEDonate.mm  AEExtensionCell.h  AEExtensionCell.mm  AEExtensionCell.xib  AEPrefs.h  AEPrefs.mm  Makefile
AEPrefs/AEPrefs.xcodeproj/: project.pbxproj
AEPrefs/Resources/: AEExtensionCell.nib  about.txt
AssistantExtensions.xcodeproj/: project.pbxproj
AssistantExtensions.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Extensions/HelloSnippet/: Makefile
Extensions/YouTube/: Makefile_just_example
Extensions/aecmd/: Makefile  control  main.mm
Extensions/locationtest/: AELocationTest.h  AELocationTest.mm  AELocationTestCommands.h  AELocationTestCommands.mm  Makefile  SiriObjects.h  control
Extensions/rawobjects/: AERawObjects.h  AERawObjects.mm  Makefile  SiriObjects.h  control
Extensions/systemsnippet/: Makefile  (+5 more)
chatbot/: AEChatBot.h  AEChatBot.mm  AEChatBotCommands.h  AEChatBotCommands.mm  Makefile  control
customizer/: AECustomizer.h  AECustomizer.mm  AECustomizerCommands.h  AECustomizerCommands.mm  Makefile  SiriObjects.h  control
include/: VoiceServices.h
jpsupport/: Makefile  Tweak.xm  control
lib/: libaiml.dylib  libdisplaystack.dylib  libssl.0.9.8.dylib
libaiml/: Makefile  theos
libaiml/libaiml/: AUTHORS  CAIML  ChangeLog  INSTALL  Makefile.am  Makefile.cvs  README  TODO  config.h.in  configure.in  libaiml.lsm  libaiml.pc.in
libaiml/libaiml/doc/html/: annotated.html  classaiml_1_1cInterpreter-members.html  classaiml_1_1cInterpreter.html  classaiml_1_1cInterpreterCallbacks-members.html  classaiml_1_1cInterpreterCallbacks.html  classes.html  dir_000000.html  dirs.html  functions.html  functions_func.html  functions_vars.html  index.html  namespaceaiml.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  structaiml_1_1cCoreOptions-members.html  structaiml_1_1cCoreOptions.html  structaiml_1_1cMatchLog-members.html  structaiml_1_1cMatchLog.html
libaiml/libaiml/doc/man/man3/: aiml.3  aiml_cCoreOptions.3  aiml_cInterpreter.3  aiml_cInterpreterCallbacks.3  aiml_cMatchLog.3
libaiml/libaiml/src/: Makefile.am  aiml.cpp  aiml_parser.cpp  aiml_parser.h  caiml_parser.cpp  caiml_parser.h  cconfig.cpp  cconfig.h  config.h  config_parser.cpp  config_parser.h  core.cpp  core.h  errors.cpp  global.h  graphmaster.cpp  graphmaster.h  javascript.cpp  javascript.h  serializer.cpp  serializer.h  std_util.h  std_utils.cpp  stuff.cpp  template_parser.cpp  user.cpp  user.h  user_manager.cpp  user_manager.h
libaiml/libaiml/test_app/: Makefile.am  libaiml.xml.dist  main.cpp  userlist.xml
libaiml/libaiml/test_app/aiml/: AI.aiml  Adverbs.aiml  Atomic.aiml  Bot.aiml  Botmaster.aiml  Client.aiml  Date.aiml  Default.aiml  Dialog.aiml  Emotion.aiml  Geography.aiml  Gossip.aiml  Interjection.aiml  Knowledge.aiml  Makefile.am  Makefile.in  Parts.aiml  Reduce.aiml  Reductions.aiml  Religion.aiml  Salutations.aiml  Sex.aiml  Spam.aiml  Sports.aiml  Stack.aiml  That.aiml  update.aiml
sbstoggles/: AESBSToggles.h  AESBSToggles.mm  AESBSTogglesCommands.h  AESBSTogglesCommands.mm  AEToggle.h  AEToggle.mm  Makefile  control
standard/: AERandomSnippet.h  AERandomSnippet.m  AEStandard.h  AEStandard.mm  AEStandardCommands.h  AEStandardCommands.mm  Makefile  control
(+131 files in other folders)
