INCLUDES = 
METASOURCES = AUTO
noinst_DATA = Adverbs.aiml AI.aiml ALICE.aiml Astrology.aiml Atomic.aiml \
	Biography.aiml Bot.aiml Botmaster.aiml Client.aiml Computers.aiml Date.aiml \
	Default.aiml Dialog.aiml Drugs.aiml Emotion.aiml Food.aiml Geography.aiml \
	Gossip.aiml History.aiml Humor.aiml Inquiry.aiml Interjection.aiml IU.aiml \
	Knowledge.aiml Literature.aiml Makefile.am Money.aiml Movies.aiml Music.aiml \
	Parts.aiml Personality.aiml Philosophy.aiml Pickup.aiml Politics.aiml \
	Predicates.aiml Psychology.aiml Reduce.aiml Reducer.aiml Reductions.aiml Religion.aiml \
	Salutations.aiml Science.aiml Sex.aiml Spam.aiml Sports.aiml Stack.aiml Stories.aiml \
	That.aiml update.aiml Wallace.aiml Wallace.aiml.1 Xfind.aiml
